Tab content on tablet fixes

--- a/sass/styles/responsive.scss
+++ b/sass/styles/responsive.scss
@@ -54,6 +54,12 @@ a[href^="tel"] {
     #currenthover, .currenthover {
         display: none!important;
     }
+    .schooliconholder {
+        display:none;
+    }
+   .tabcontent {
+        height:500px ;
+    }
     #listview {
         .fc-toolbar {
             display:flex !important;
